@@ -43,7 +43,7 @@ S4EStatusService.prototype =
 	_defaultStatus:          { val: "", type: "" },
 
 	_isFullScreen:           false,
-	_isFullScreenVideo:      false,
+	_isVideo:                false,
 
 	_statusText:             { val: "", type: "" },
 	_noUpdate:               false,
@@ -235,24 +235,10 @@ S4EStatusService.prototype =
 		}
 	},
 
-	updateFullScreen: function()
+	setFullScreenState: function(isFullScreen, isVideo)
 	{
-		this._isFullScreen = this._window.fullScreen;
-		this._isFullScreenVideo = false;
-		if(this._isFullScreen)
-		{
-			let fsEl = this._window.content.document.mozFullScreenElement;
-			if(fsEl)
-			{
-				this._isFullScreenVideo = (
-					fsEl.nodeName == "VIDEO"
-					|| (fsEl.nodeName == "IFRAME" && fsEl.contentDocument && fsEl.contentDocument.getElementsByTagName("VIDEO").length > 0)
-					|| fsEl.getElementsByTagName("VIDEO").length > 0
-				);
-			}
-		}
-
-		Services.console.logStringMessage("S4E Fullscreen Video: " + this._isFullScreenVideo);
+		this._isFullScreen = isFullScreen;
+		this._isVideo = isFullScreen && isVideo;
 
 		this.clearStatusField();
 		this.updateStatusField(true);
@@ -329,7 +315,7 @@ S4EStatusService.prototype =
 
 		let label = null;
 
-		if(this._isFullScreen && this._service.advancedStatusDetectFullScreen)
+		if(this._isFullScreen)
 		{
 			switch(location)
 			{
@@ -360,7 +346,7 @@ S4EStatusService.prototype =
 				break;
 			case 3: // Popup
 			default:
-				if(this._isFullScreenVideo && this._service.advancedStatusDetectVideo)
+				if(this._isVideo)
 				{
 					return;
 				}
