@@ -2,6 +2,7 @@ Version next
 * Drop support for Firefox 37.0 and older.
 * Fix window.caligon.status4evar is undefined bugs.
 * Improve fullscreen HTML5 video detection (fix on Google Drive). Support fullscreen iframe elements.
+* Add e10s multi-process support for detecting fullscreen video.
 
 Version 2015.07.14.22b
 * Fix location bar formatting support in Firefox 42.
